# Copyright 2022 Arm Limited and/or its affiliates <open-source-office@arm.com>

[package]
name = "ili9806"
version = "0.5.0"
description = "A platform agnostic driver to interface with the ILI9806 TFT LCD display"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal-driver", "display", "LCD"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crypterian/ili9806-rs"
edition = "2021"


[dependencies]
display-interface       = "0.4.1"
display-interface-spi   = "0.4.1"
embedded-hal            = { version = "0.2.7",  features = ["unproven"] }
embedded-graphics       = { value = "0.7.1", optional = true }
embedded-graphics-core  = { value = "0.3.3", optional = true }

esp32s3-hal       = "0.2.0"
esp-hal-common    = { version = "0.2.0",  features = ["esp32s3"] }
esp-backtrace     = { version = "0.2.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
esp-println       = { version = "0.3.0", features = ["esp32s3"] }
critical-section  = "1.1.1"
xtensa-lx         = { version = "0.7.0",  features = ["esp32s3"] }
xtensa-lx-rt      = { version = "0.13.0", features = ["esp32s3"] }

#[dev-dependencies]
#esp32s3-hal       = "0.2.0"
#esp-hal-common    = { version = "0.2.0",  features = ["esp32s3"] }
#esp-backtrace     = { version = "0.2.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
#esp-println       = { version = "0.3.0", features = ["esp32s3"] }
#critical-section  = "1.1.1"
#xtensa-lx         = { version = "0.7.0",  features = ["esp32s3"] }
#xtensa-lx-rt      = { version = "0.13.0", features = ["esp32s3"] }

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core", "embedded-graphics"]

[[bin]]
name = "esp32_s3"
